--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -14,6 +14,13 @@ on:
       - "main"
 
 jobs:
+  default-shell:
+    name: Default shell
+    runs-on: "ubuntu-latest"
+    defaults:
+      # conda setup requires this special shell
+      run:
+        shell: bash -l {0}
   test:
     name: Test on ${{ matrix.os }}, Python ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
@@ -26,7 +33,6 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Additional info about the build
-      shell: bash
       run: |
         uname -a
         df -h
@@ -48,17 +54,12 @@ jobs:
 
     - name: Install package
 
-      # conda setup requires this special shell
-      shell: bash -l {0}
       run: |
         python -m pip install . --no-deps
         conda list
 
 
     - name: Run tests
-
-      # conda setup requires this special shell
-      shell: bash -l {0}
 
       run: |
         pytest -v --cov=src/conda_package_handling --cov-report=xml --color=yes tests/
